--- a/tcf_website/templates/login/login.html
+++ b/tcf_website/templates/login/login.html
@@ -1,7 +1,8 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% load static %}
 
 {% block content %}
+
 <div class="login-container" style="width: 100%; text-align: center">
     <h1>Welcome to tCF!</h1>
     {% if error %}
@@ -9,8 +10,6 @@
     {% else %}
         <h4>Please log in to continue.</h4>
     {% endif %}
-    <div>
-        <a href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'login/google-login.png' %}" alt="Sign in with Google"></a>
-    </div>
+    {% include "login/login_button.html" %}
 </div>
 {% endblock %}
