--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -1,13 +1,13 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% load static %}
 
 {% block content %}
-<div class="login-container" style="width: 100%; text-align: center">
-    <h1>Browse</h1>
-    <p>{{request.user}}</p>
-    <p>{{request.user.computing_id}}</p>
-    <p>{{request.user.first_name}}</p>
-    <p>{{request.user.last_name}}</p>
-    <p>{{request.user.graduation_year}}</p>
-</div>
+<h1>Browse courses</h1>
+<ul>
+    {% for d in departments %}
+        <li>
+            <a href="{% url 'department' dept_id=d.pk %}">{{d}}</a>
+        </li>
+    {% endfor %}
+</ul>
 {% endblock %}
