--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -16,15 +16,19 @@
         <li class="nav-item {% if request.resolver_match.url_name == 'browse' %}active{% endif %}">
           <a class="nav-link" href="{% url 'browse' %}">Courses</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Review</a>
+        <li class="nav-item {% if request.resolver_match.url_name == 'new_review' %}active{% endif %}">
+            <a class="nav-link" href="{% url 'new_review' %}">Review</a>
         </li>
       </ul>
 
-    
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+    <form class="form-inline ml-auto mr-md-2">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+
+    <ul class="navbar-nav">
+        <li class="nav-item {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
+          <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
         {% if user.is_authenticated %}
         <li class="nav-item dropdown">
@@ -32,8 +36,8 @@
                 Hi, {{user.first_name}}
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Edit profile</a>
-              <a class="dropdown-item" href="#">My reviews</a>
+              <a class="dropdown-item" href="{% url 'profile' %}">Edit profile</a>
+              <a class="dropdown-item" href="{% url 'reviews' %}">My reviews</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
             </div>
