--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -1,13 +1,29 @@
 {% extends "base/base.html" %}
 {% load static %}
 
+{% block styles %}
+<link rel="stylesheet" href="{% static 'browse/browse.css' %}" />
+{% endblock %}
+
 {% block content %}
-<h1>Browse courses</h1>
-<ul>
-    {% for d in departments %}
-        <li>
-            <a href="{% url 'department' dept_id=d.pk %}">{{d}}</a>
-        </li>
-    {% endfor %}
-</ul>
+<div class="browse container-fluid">
+    <h2>Browse courses</h2>
+    <div class="schools">
+        {% for s in schools %}
+        <div class="school container-lg">
+            <h3>{{s.name}}</h3>
+            <ul class="department-list">
+                {% for d in s.department_set.all %}
+                    <li>
+                        <a href="{% url 'department' dept_id=d.pk %}">{{d}}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+
+
+
 {% endblock %}
