--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -5,8 +5,38 @@
 {% endblock %}
 
 {% block content %}
-<div class="browse container-fluid">
-    <h2>About tCF</h2>
+<div class="browse container">
+    <h2>theCourseForum</h2>
+    <h6>connecting you to the courses you love.</h6>
+    <p>theCourseForum is a product of the UVa community and the students that manage the site, where UVa students can share their experiences about the classes they've taken. We aim to make the task of choosing your classes as easy as possible by providing distributions of past grades for the classes along with reviews by your fellow students. It's all run by students, for students, in order to make your academic experience at UVa the best it can be. Students themselves have the ability to leave an impact on the community by sharing their own individual experiences.
+    </p>
+    <img src="https://thecourseforum.com/assets/about/banner_uva-12ea5e186160293334f8591381a6ab7f57079fd86623ddc8319e8f9e58714b86.jpg"/>
+    <div class="row mt-3">
+        <div class="col">
+            <h5>Beginnings</h5>
+            <p>
+                In Fall 2005, UVa students Jeff Bordogna and Alan Webb recognized a need for an online community to help students share their class experiences, and thus developed the first version of theCourseForum. Over time, this simple tool grew and prospered as more and more students found it despite our extraordinarily small marketing budget. The site has now become a fixture of the UVA course signup season to the extent that over 80% of students use the site every year. Starting in 2012, a small elite team of skilled individuals worked to redesign the site to bring it into the modern age. After a long year of work, the new site was released, and it continues to be managed by UVa students.
+            </p>
+            <p>
+                Although this organization has members who are University of Virginia students and may have University employees associated or engaged in its activities and affairs, the organization is not a part of or an agency of the University. It is a separate and independent organization, which is responsible for and manages its own activities and affairs. The University does not direct, supervise or control the organization and is not responsible for the organization’s contracts, acts or omissions.
+            </p>
+        </div>
+        <div class="col">
+            <h5>
+                What can you do?
+            </h5>
+            <p>
+                The biggest thing you can do:  submit reviews. While the framework of the site is spectacular, what really makes theCourseForum is the reviews submitted by students. If that isn't enough, our team is always looking for more people interested in website design and data analytics. If that's you, contact us at support@thecourseforum.com; experience not required.
+            </p>
+            <img src="https://thecourseforum.com/packs/media/about/uvaparentsfund-306e8af7.png"/>
+            <h5>
+                Thanks to the UVA Parents Fund!
+            </h5>
+            <p>
+                The UVA Parents Fund helps us cover server costs from the large amount of traffic that we get. Their help has allowed the site to stay up and running continuously as we keep developing new features.
+            </p>
+        </div>
+    </div>
 </div>
 
 
