--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -1,7 +1,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
         <img src="https://thecourseforum.com/images/logo-orange-small.png" width="30" height="30" alt="tCF">
     </a>
 
@@ -23,7 +23,7 @@
 
     <form class="form-inline ml-auto mr-md-2">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
     </form>
 
     <ul class="navbar-nav">
