--- a/tcf_website/templates/department/department.html
+++ b/tcf_website/templates/department/department.html
@@ -1,18 +1,56 @@
 {% extends "base/base.html" %}
 {% load static %}
 
+{% block styles %}
+<link rel="stylesheet" href="{% static 'department/department.css' %}" />
+{% endblock %}
+
 {% block content %}
-<h1>{{department.name}}</h1>
-<ul>
-    {% for sd in subdepartments %}
-        <li>{{sd.name}}</li>
+<div class="browse container-fluid">
+    <div class="row">
+        <div class="col">
+            <h2>{{ department.name }}</h2>
+        </div>
+        <div class="col-3 btn-group" role="group" aria-label="Basic example">
+            <button type="button" id="hide-btn" onclick="hideOld()" class="btn btn-outline-dark active">{{latest_semester}}</button>
+            <button type="button" id="show-btn" onclick="showOld()" class="btn btn-outline-dark">Last 5 Years</button>
+        </div>
+    </div>
+    <div class="subdepartments">
+        {% for sd in department.subdepartment_set.all %}
+        <div class="subdepartment container-lg">
+            <h3>{{ sd.name }}</h3>
+            <ul class="course-list">
+                {% for c in sd.recent_courses|dictsort:"number" %}
+                    <li class="{% if not c.is_recent %}old{% endif %}">
+                        <a href="{% url 'course' course_id=c.pk %}">
+                            {{ c }}
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+{% endblock %}
 
-        <ul>
-            {% for c in sd.course_set.all %}
-                <li>{{sd.mnemonic}} {{c.number}} - {{c.title}}</li>
-            {% endfor %}
-        </ul>
+{% block js %}
+<script>
 
-    {% endfor %}
-</ul>
+const showOld = () => {
+    $('#hide-btn').removeClass('active')
+    $('#show-btn').addClass('active')
+
+    $('.old').addClass('shown')
+}
+
+const hideOld = () => {
+    $('#hide-btn').addClass('active')
+    $('#show-btn').removeClass('active')
+
+    $('.old').removeClass('shown')
+}
+
+</script>
 {% endblock %}
