--- a/tcf_website/static/course/course.css
+++ b/tcf_website/static/course/course.css
@@ -1,8 +1,8 @@
-.subdepartments {
+.instructors {
     margin-top: 30px;
 }
 
-.course-list {
+.instructor-list {
     list-style-type: none;
     padding: 0 0 0 10px;
 }
