--- a/tcf_website/templates/department/department.html
+++ b/tcf_website/templates/department/department.html
@@ -3,22 +3,28 @@
 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'department/department.css' %}" />
+<link rel="stylesheet" href="{% static 'base/show-hide.css' %}" />
 {% endblock %}
 
 {% block content %}
-<div class="browse container-fluid">
-    <div class="row">
-        <div class="col">
-            <h2>{{ department.name }}</h2>
+
+<div class="department container-fluid">
+    <div class="btn-toolbar justify-content-between mb-3" role="toolbar" aria-label="Toolbar with button groups">
+        <div class="btn-group mr-2" role="group" aria-label="First group">
+            <ol class="breadcrumb mb-0">
+                <li class="breadcrumb-item"><a href="{% url 'browse' %}">{{ department.school.name }}</a></li>
+                <li class="breadcrumb-item active" aria-current="page">{{ department.name }}</li>
+            </ol>
         </div>
-        <div class="col-3 btn-group" role="group" aria-label="Basic example">
+        <div class="btn-group" role="group" aria-label="Basic example">
             <button type="button" id="hide-btn" onclick="hideOld()" class="btn btn-outline-dark active">{{latest_semester}}</button>
             <button type="button" id="show-btn" onclick="showOld()" class="btn btn-outline-dark">Last 5 Years</button>
         </div>
-    </div>
+      </div>
+
     <div class="subdepartments">
         {% for sd in department.subdepartment_set.all %}
-        <div class="subdepartment container-lg">
+        <div class="subdepartment container-lg {% if not sd.has_current_course %}old{% endif %}">
             <h3>{{ sd.name }}</h3>
             <ul class="course-list">
                 {% for c in sd.recent_courses|dictsort:"number" %}
@@ -36,21 +42,5 @@
 {% endblock %}
 
 {% block js %}
-<script>
-
-const showOld = () => {
-    $('#hide-btn').removeClass('active')
-    $('#show-btn').addClass('active')
-
-    $('.old').addClass('shown')
-}
-
-const hideOld = () => {
-    $('#hide-btn').addClass('active')
-    $('#show-btn').removeClass('active')
-
-    $('.old').removeClass('shown')
-}
-
-</script>
+<script src="{% static 'base/show-hide.js' %}"></script>
 {% endblock %}
