--- a/tcf_website/templates/reviews/new.html
+++ b/tcf_website/templates/reviews/new.html
@@ -5,8 +5,73 @@
 {% endblock %}
 
 {% block content %}
-<div class="browse container-fluid">
-    <h2>Write a review</h2>
+<div class="browse container-fluid d-flex flex-column align-items-center">
+    
+    <div class="row">
+    <div class="card col">
+        
+    <form class="card-body text-center">
+        <h2 class="card-title mt-3 mb-5">Write a review</h2>
+        <div class="form-row mb-3">
+          <div class="form-group col">
+            <label for="department">Department</label>
+            <input type="text" placeholder="e.g. CS" class="form-control" id="department">
+          </div>
+          <div class="form-group col">
+            <label for="course">Course</label>
+            <input type="text" placeholder="e.g. 2150" class="form-control" id="course">
+          </div>
+          <div class="form-group col">
+            <label for="instructor">Instructor</label>
+            <input type="text" placeholder="e.g. Aaron Bloomfield" class="form-control" id="instructor">
+          </div>
+          <div class="form-group col">
+            <label for="semester">Semester</label>
+            <input type="text" placeholder="e.g. Fall 2020" class="form-control" id="semester">
+          </div>
+        </div>
+        <div class="form-group mb-3">
+          <label for="validationTextarea">Tell us more about the course & instructor:</label>
+          <textarea class="form-control" id="validationTextarea" placeholder="e.g. I love CS 2150, Bloomfield is great!" required></textarea>
+        </div>
+        <div class="form-row d-flex justify-content-space-around mb-3">
+          <div class="form-group col mr-5">
+                <div class="mt-3">
+                    <label for="customRange3">Instructor rating</label>
+                    <div class="d-flex">
+                        <span class="mr-2">1</span>
+                        <input type="range" class="custom-range" min="1" max="5" step="1" id="customRange3">
+                        <span class="ml-2">5</span>
+                    </div>
+                </div>
+                <div class="mt-3">
+                    <label for="customRange3">Difficulty</label>
+                    <div class="d-flex">
+                        <span class="mr-2">1</span>
+                        <input type="range" class="custom-range" min="1" max="5" step="1" id="customRange3">
+                        <span class="ml-2">5</span>
+                    </div>
+                </div>
+                <div class="mt-3">
+                    <label for="customRange3">Recommendability</label>
+                    <div class="d-flex">
+                        <span class="mr-2">1</span>
+                        <input type="range" class="custom-range" min="1" max="5" step="1" id="customRange3">
+                        <span class="ml-2">5</span>
+                    </div>
+                </div>
+          </div>
+          <div class="form-group col d-flex justify-content-center align-items-center">
+                <div class="container-fluid">
+                    <label for="inputState">Hours per week of work</label>
+                    <input type="text" class="form-control" id="semester">
+                </div>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit!</button>
+      </form>
+    </div>
+</div>
 </div>
 
 
