--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -1,8 +1,10 @@
+{% load static %}
+
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
     <a class="navbar-brand" href="/">
-        <img src="https://thecourseforum.com/images/logo-orange-small.png" width="30" height="30" alt="tCF">
+        <img src="{% static 'base/img/logo-orange-small.png' %}" width="30" height="30" alt="tCF">
     </a>
 
     <a class="navbar-brand" href="/">theCourseForum</a>
