--- a/tcf_website/templates/login/login.html
+++ b/tcf_website/templates/login/login.html
@@ -6,7 +6,7 @@
 <div class="row justify-content-center">
 <div class="card col-3 text-center">
     <div class="card-body">
-        <img style="width: auto; height: 100px;" src="https://thecourseforum.com/images/logo-orange-small.png" class="card-img-top" alt="tCF" width="auto">
+        <img style="width: auto; height: 100px;" src="{% static 'base/img/logo-orange-small.png' %}" class="card-img-top" alt="tCF" width="auto">
         <h5 class="card-title">Welcome to theCourseForum!</h5>
         <p class="card-text">Please log in to continue.</p>
         {% if error %}
