--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -10,7 +10,7 @@
     <h6>connecting you to the courses you love.</h6>
     <p>theCourseForum is a product of the UVa community and the students that manage the site, where UVa students can share their experiences about the classes they've taken. We aim to make the task of choosing your classes as easy as possible by providing distributions of past grades for the classes along with reviews by your fellow students. It's all run by students, for students, in order to make your academic experience at UVa the best it can be. Students themselves have the ability to leave an impact on the community by sharing their own individual experiences.
     </p>
-    <img src="https://thecourseforum.com/assets/about/banner_uva-12ea5e186160293334f8591381a6ab7f57079fd86623ddc8319e8f9e58714b86.jpg"/>
+    <img src="{% static 'about/banner_uva.jpg' %}"/>
     <div class="row mt-3">
         <div class="col">
             <h5>Beginnings</h5>
@@ -28,7 +28,7 @@
             <p>
                 The biggest thing you can do:  submit reviews. While the framework of the site is spectacular, what really makes theCourseForum is the reviews submitted by students. If that isn't enough, our team is always looking for more people interested in website design and data analytics. If that's you, contact us at support@thecourseforum.com; experience not required.
             </p>
-            <img src="https://thecourseforum.com/packs/media/about/uvaparentsfund-306e8af7.png"/>
+            <img src="{% static 'about/parents_fund.png' %}"/>
             <h5>
                 Thanks to the UVA Parents Fund!
             </h5>
