--- a/tcf_website/templates/department/department.html
+++ b/tcf_website/templates/department/department.html
@@ -3,7 +3,7 @@
 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'department/department.css' %}" />
-<link rel="stylesheet" href="{% static 'base/show-hide.css' %}" />
+<link rel="stylesheet" href="{% static 'common/show-hide.css' %}" />
 {% endblock %}
 
 {% block content %}
@@ -22,16 +22,15 @@
         </div>
       </div>
 
-    <div class="subdepartments">
+    <div class="subdepartments mt-3">
         {% for sd in department.subdepartment_set.all %}
         <div class="subdepartment container-lg {% if not sd.has_current_course %}old{% endif %}">
             <h3>{{ sd.name }}</h3>
             <ul class="course-list">
                 {% for c in sd.recent_courses|dictsort:"number" %}
                     <li class="{% if not c.is_recent %}old{% endif %}">
-                        <a href="{% url 'course' course_id=c.pk %}">
-                            {{ c }}
-                        </a>
+                        {% url 'course' course_id=c.pk as link %}
+                        {% include "common/rating_card.html" with title=c.code subtitle=c.title link=link last_taught=c.semester_last_taught content=c.description %}
                     </li>
                 {% endfor %}
             </ul>
@@ -42,5 +41,5 @@
 {% endblock %}
 
 {% block js %}
-<script src="{% static 'base/show-hide.js' %}"></script>
+<script src="{% static 'common/show-hide.js' %}"></script>
 {% endblock %}
