--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="browse container-fluid">
+<div class="browse container">
     <h2>Browse by Department</h2>
     <div class="schools">
 
