--- a/tcf_website/templates/common/rating_card.html
+++ b/tcf_website/templates/common/rating_card.html
@@ -1,6 +1,6 @@
-<div class="card mb-2">
+<div class="card rating-card mb-2">
     <div class="row no-gutters">
-        <a class="col-md-4 pl-3 card-body d-flex align-items-center" href="{{ link }}">
+        <a class="col-md-4 pl-5 card-body d-flex align-items-center rating-card-link" href="{{ link }}">
             <div>
                 <h3>{{ title }}</h3>
                 {% if subtitle %}
