--- a/tcf_website/templates/reviews/reviews.html
+++ b/tcf_website/templates/reviews/reviews.html
@@ -1,10 +1,10 @@
 <!-- TODO: include review styles here -->
 
 <div class="reviews container-lg">
-    <ul class="review-list pl-2" style="list-style-type: none;">
+    <ul class="review-list" style="list-style-type: none;">
     {% for r in reviews %}
         <li>
-            <div class="review card">
+            <div class="review card mb-2">
                 <div class="card-body">
                     {% if profile %}
                     <div class="d-flex justify-content-between">
