--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -5,19 +5,45 @@ html {
 
 body {
     padding-top: 70px; /* Height of fixed navbar */
-    margin-bottom: 60px; /* Margin bottom by footer height */
+    margin-bottom: 70px; /* Margin bottom by footer height */
+    /* min-height: 100vh; */
+    background-color: #EBEBEB;
 }
 
 .content {
     padding: 10px 50px 30px 50px;
 }
 
-.footer {
+footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
-    line-height: 60px; /* Vertically center the text there */
+    height: 70px; /* Set the fixed height of the footer here */
+    line-height: 30px; /* Vertically center the text there */
     /* background-color: #f5f5f5; */
     text-align: center;
+}
+
+a {
+    color: black;
+}
+a:hover {
+    text-decoration: none;
+    color: #db4929;
+}
+
+ul {
+    padding: 0;
+    list-style-type: none;
+}
+
+.btn-primary {
+    background-color: #db4929;
+    filter: brightness(110%);
+    border-color: #db4929;
+}
+.btn-primary:hover {
+    background-color: #db4929;
+    border-color: #db4929;
+    filter: brightness(100%);
 }
