--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -3,7 +3,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand logo" href="/">
         <img src="{% static 'base/img/logo-orange-small.png' %}" width="30" height="30" alt="tCF">
     </a>
 
