--- a/tcf_website/templates/browse/school.html
+++ b/tcf_website/templates/browse/school.html
@@ -1,6 +1,8 @@
 <div class="school card mb-3">
+    <div class="card-header pt-3">
+        <h3 class="card-title mb-0">{{school_name}}</h3>
+    </div>
     <div class="card-body">
-        <h3 class="card-title">{{school_name}}</h3>
         <ul class="department-list">
             {% for d in departments|dictsort:"name" %}
                 <li>
