Login style polish

--- a/tcf_website/templates/login/login.html
+++ b/tcf_website/templates/login/login.html
@@ -4,11 +4,11 @@
 {% block content %}
 
 <div class="row justify-content-center">
-<div class="card col-3 text-center">
+<div class="card col-4 text-center">
     <div class="card-body">
-        <img style="width: auto; height: 100px;" src="{% static 'base/img/logo-orange-small.png' %}" class="card-img-top" alt="tCF" width="auto">
-        <h5 class="card-title">Welcome to theCourseForum!</h5>
-        <p class="card-text">Please log in to continue.</p>
+        <img style="width: auto; height: 150px;" src="{% static 'base/img/logo-orange-small.png' %}" class="card-img-top" alt="tCF" width="auto">
+        <h2 class="card-title">Welcome to theCourseForum!</h2>
+        <h5 class="card-text mb-3">Please log in to continue.</h5>
         {% if error %}
             <p style="color: red;" class="card-text">There was an error logging you in. Please make sure you're using an @virginia.edu email address.</p>
         {% endif %}
