--- a/tcf_website/templates/login/login_button.html
+++ b/tcf_website/templates/login/login_button.html
@@ -2,6 +2,6 @@
 
 <div class="login-button">
     <a href="{% url 'social:begin' 'google-oauth2' %}">
-        <img style="width: 100%; height: auto;" src="{% static 'login/google-login.png' %}" alt="Sign in with Google">
+        <img style="width: 250px; height: auto;" src="{% static 'login/google-login.png' %}" alt="Sign in with Google">
     </a>
 </div>
