--- a/tcf_website/templates/login/extra_info_form.html
+++ b/tcf_website/templates/login/extra_info_form.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %}
+{% extends "login/login_base.html" %}
+{% load static %}
 
-{% block content %}
+{% block login_content %}
 
+<h2 class="card-title">Welcome to theCourseForum!</h2>
 <form method="POST"> 
     {% csrf_token %}
     <div class="form-group">
