--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -10,19 +10,7 @@
 
 {% block content %}
 <div class="course container">
-    <div class="tcf-toolbar btn-toolbar justify-content-between mb-3" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group mr-2" role="group" aria-label="First group">
-            <ol class="breadcrumb mb-0">
-                <li class="breadcrumb-item"><a href="{% url 'browse' %}">{{ course.subdepartment.department.school.name }}</a></li>
-                <li class="breadcrumb-item"><a href="{% url 'department' dept_id=course.subdepartment.department.pk %}">{{ course.subdepartment.name }}</a></li>
-                <li class="breadcrumb-item active" aria-current="page">{{ course.code }}</li>
-            </ol>
-        </div>
-        <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" id="hide-btn" onclick="hideOld()" class="btn btn-outline-dark active">{{latest_semester}}</button>
-            <button type="button" id="show-btn" onclick="showOld()" class="btn btn-outline-dark">All</button>
-        </div>
-      </div>
+    {% include "common/toolbar.html" with breadcrumbs=breadcrumbs active_text=latest_semester hidden_text="All" %}
       
     <div class="instructors container-lg mt-3">
         <h3>{{ course }}</h3>
