--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -1,6 +1,7 @@
 html {
     position: relative;
     min-height: 100%;
+    max-width: 100vw;
 }
 
 body {
@@ -8,6 +9,11 @@ body {
     margin-bottom: 70px; /* Margin bottom by footer height */
     /* min-height: 100vh; */
     background-color: #EBEBEB;
+    max-width: 100vw;
+}
+
+.navbar {
+    max-width: 100vw;
 }
 
 .content {
