--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -10,7 +10,7 @@
     <h6>connecting you to the courses you love.</h6>
     <p>theCourseForum is a product of the UVa community and the students that manage the site, where UVa students can share their experiences about the classes they've taken. We aim to make the task of choosing your classes as easy as possible by providing distributions of past grades for the classes along with reviews by your fellow students. It's all run by students, for students, in order to make your academic experience at UVa the best it can be. Students themselves have the ability to leave an impact on the community by sharing their own individual experiences.
     </p>
-    <img src="{% static 'about/banner_uva.jpg' %}"/>
+    <img class="container-fluid" src="{% static 'about/banner_uva.jpg' %}"/>
     <div class="row mt-3">
         <div class="col">
             <h5>Beginnings</h5>
