--- a/tcf_website/templates/login/login_base.html
+++ b/tcf_website/templates/login/login_base.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 
-<div class="row justify-content-center">
-<div class="card col-4 text-center">
+<div class="container-fluid col-md-4 justify-content-center">
+<div class="card text-center">
     <div class="card-body">
         <img style="width: auto; height: 150px;" src="{% static 'base/img/logo-orange-small.png' %}" class="card-img-top" alt="tCF" width="auto">
         {% block login_content %}
