--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -13,7 +13,10 @@
     {% include "common/toolbar.html" with breadcrumbs=breadcrumbs active_text=latest_semester hidden_text="All" %}
       
     <div class="instructors container-lg mt-3">
-        <h3>{{ course }}</h3>
+        <div class="d-md-flex">
+            <h1 class="mr-md-3">{{ course.code }}</h1>
+            <h1>{{ course.title }}</h1>
+        </div>
         <ul class="instructor-list">
         {% for i in recent_instructors %}
             <li class="instructor">
