--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -10,7 +10,7 @@
 
     {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
 
-    <div class="d-flex flex-column align-items-center my-5">
+    <div class="d-flex flex-column align-items-center my-3 my-md-5">
         <h1>{{ instructor.full_name }}</h1>
         <div class="d-md-flex">
             <h4 class="mr-md-3">{{ course.code }}</h4>
