added pages for privacy and terms

--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -25,6 +25,8 @@
     <footer class="container-fluid">
         <div class="row">
             <div class="col-lg-12 text-center" style="color: black;">
+                <a href="{% url 'privacy' %}">Privacy</a> |
+                <a href="{% url 'terms' %}">Terms</a> |
                 theCourseForum &copy; {{ LATEST_SEMESTER.year }}
                 <p>
                     <span>
