--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -18,7 +18,6 @@
     </p>
     <br>
     <a class="btn btn-primary btn-lg" href="{% url 'browse' %}" role="button">Browse reviews</a>
-    <a class="btn btn-secondary btn-lg" href="{% url 'login' %}" role="button">Sign in</a>
+    <a class="btn btn-light btn-lg" href="{% url 'login' %}" role="button">Sign in</a>
 </div>
 {% endblock %}
-
